# MDS-VIC_Face_Recognition

./: .gitignore  README.md  informations.tex  job.batch  pyproject.toml
data/: download.sh
logs/: LPBH_ORL_results.json  LPBH_Robustness_ORL_blur.json  LPBH_Robustness_ORL_crop.json  LPBH_Robustness_ORL_noise.json  LPBH_Robustness_ORL_rotation.json  LPBH_Robustness_Yale_blur.json  LPBH_Robustness_Yale_crop.json  LPBH_Robustness_Yale_noise.json  LPBH_Robustness_Yale_rotation.json  LPBH_Yale_results.json  orl_learning_curves.json  yale_learning_curves.json
notebooks/: A_00_experiments.ipynb  A_20_RobustnessFisherfaces.ipynb  F_00_experiments.ipynb  F_01_DeepLearning.ipynb  F_10_GlobalResults.ipynb  F_20_RobustnessEigenFaces.ipynb  J_00_experiments.ipynb  J_01_RobustnessLBPH.ipynb  J_01_experiments.ipynb
report/final_report/: egbib.bib  final_report.aux  final_report.blg  final_report.fdb_latexmk  final_report.fls  final_report.tex
report/proposal/: proposal.aux  proposal.blg  proposal.fdb_latexmk  proposal.fls  proposal.tex
report/slides/: main.tex
scripts/: generate_global_graphs.py
src/vic/: dataloader.py  metrics.py  models.py  transform.py
